# TDD-superlists

./: .gitignore  Makefile  functional_tests.py  pyproject.toml
functional_tests/: tests.py
lists/: models.py  tests.py  views.py
lists/migrations/: 0001_initial.py
lists/templates/: home.html
superlists/: settings.py  urls.py
